--- a/assets/snippets/remote.html
+++ b/assets/snippets/remote.html
@@ -63,7 +63,7 @@
     }
     </script>
   </head>
-  <body data-aos="fade-in">
+  <body data-aos="fade">
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5W57LD3"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
