--- a/demo/index.html
+++ b/demo/index.html
@@ -18,7 +18,7 @@
     })(window,document,'script','dataLayer','GTM-5W57LD3');</script>
     <!-- End Google Tag Manager -->
     <meta charset="utf-8">
-    <title> | The Pine Tree Motel</title>
+    <title>The Pine Tree Motel</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- css -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
