Head style updates

--- a/demo/index.html
+++ b/demo/index.html
@@ -64,6 +64,7 @@
       }
 
       @media (min-width: 48rem) {
+        .banner.brentwood .logo {width: 12rem;}
         .availability form {
           display: flex;
           flex-direction: row;
@@ -78,6 +79,7 @@
       }
 
       @media (min-width: 90rem) {
+        .banner.brentwood .logo {width: 14rem;}
         .availability form {align-items: baseline;}
         .availability form fieldset.sm {width: calc(20% - 2rem);}
         .availability form button {margin: 0 0 0 2rem;}
