--- a/demo/stay/index.html
+++ b/demo/stay/index.html
@@ -28,9 +28,7 @@
     <link href="../../css/master.css" rel="stylesheet">
     <link href="../assets/css/demo.css" rel="stylesheet">
     <style>
-      .banner.stay {
-        background-image: url(../assets/images/stay-01-1x.jpg);
-      }
+      .banner.stay {background-image: url(../assets/images/stay-01-1x.jpg);}
 
       @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-width: 48rem) {
         .banner.about {background-image: url(../assets/images/stay-01-2x.jpg);}
