--- a/demo/activities/index.html
+++ b/demo/activities/index.html
@@ -86,7 +86,7 @@
     <main>
       <section class="banner tall left dark bg-photo center fixed activities">
         <div class="overlay" style="opacity: 0.5;"></div>
-        <div class="text" style="align-items: center;">
+        <div class="text" style="align-items: center;" data-aos="fade-up">
           <h1 class="center">Activities</h1>
           <p class="center">We invite you to relax, but if you also like to do stuff we're happy to provide options.</p>
         </div>
@@ -133,14 +133,14 @@
         </div>
       </section>
       <section class="banner short bg-gray" style="align-items: center;" data-aos="fade-up">
-        <div class="text">
+        <div class="text" data-aos="fade-up">
           <h2 class="center">Explore</h2>
           <p class="center">Hiking, skiing, brewery tours, sailing, island hopping, and more&hellip; there's so much to do in Maine. Whatever fits your interest, we are here to help you explore like a local.</p>
         </div>
       </section>
       <section class="row wide">
         <div class="card-group">
-          <div class="card" data-aos="fade-up">
+          <div class="card" data-aos="fade">
             <figure>
               <img src="../assets/images/tgc-room-1x.jpg" srcset="../assets/images/tgc-room-1x.jpg 1x, ../assets/images/tgc-room-2x.jpg 2x" alt="A simple and relaxing queen-sized bed">
             </figure>
@@ -150,7 +150,7 @@
               <p class="icon"><a href="../stay/index.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
-          <div class="card" data-aos="fade-up">
+          <div class="card" data-aos="fade">
             <figure>
               <img src="../assets/images/tour-pizza-1x.jpg" srcset="../assets/images/tour-pizza-1x 1x, ../assets/images/tour-pizza-2x.jpg 2x" alt="Delicious pizza with pepperoni and jalapenos">
             </figure>
@@ -160,7 +160,7 @@
               <p class="icon"><a href="../eat/index.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
-          <div class="card aos-init aos-animate" data-aos="fade-up">
+          <div class="card" data-aos="fade">
             <figure>
               <img src="../assets/images/gather-01-1x.jpg" srcset="../assets/images/gather-01-1x 1x, ../assets/images/gather-01-2x.jpg 2x" alt="Lights and linen hanging from the trees over white linen tablecloths outdoors">
             </figure>
