--- a/demo/eat/index.html
+++ b/demo/eat/index.html
@@ -88,22 +88,22 @@
     <main>
       <section class="banner tall right dark bg-photo center fixed eat">
         <div class="overlay" style="opacity: 0.5;"></div>
-        <div class="text">
+        <div class="text" data-aos="fade-up">
           <h1>Simple &amp; Delicious</h1>
           <p>We're happy to provide a menu of delicious food and beverages that mirrors our passion for simplicity, quality, integrity, and taste.</p>
         </div>
       </section>
       <section class="banner short bg-gray" style="align-items: center;" data-aos="fade-up">
-        <div class="text">
+        <div class="text" data-aos="fade-up">
           <h2 class="center">Hand-Crafted &amp; Local</h2>
           <p class="center">We offer breakfast and lunch and dinner, as well as beer from our own brewery. Freshly brewed local coffees are also available all day long.</p>
         </div>
       </section>
       <section class="banner split bg-white border" style="align-items: flex-start;">
-        <figure data-aos="fade-up">
+        <figure data-aos="fade-right">
           <img src="../assets/images/eat-breakfast-01-1x.jpg" srcset="../assets/images/eat-breakfast-01-1x.jpg 1x, ../assets/images/eat-breakfast-01-2x.jpg 2x" alt="Delicious egg sandwich with ham and cheese on an english muffin">
         </figure>
-        <div class="text" data-aos="fade-up">
+        <div class="text" data-aos="fade-left">
           <h2>Breakfast</h2>
           <small>Served 7am – 10am</small>
           <dl class="menu">
@@ -121,22 +121,22 @@
         </div>
       </section>
       <section class="row golden left">
-        <div class="column" data-aos="fade-up">
+        <div class="column" data-aos="fade-right">
           <figure>
             <img src="../assets/images/tour-breakfast-1x.jpg" srcset="../assets/images/tour-breakfast-1x.jpg 1x, ../assets/images/tour-breakfast-2x.jpg 2x" alt="Muffins and scones on a tray">
           </figure>
         </div>
-        <div class="column" data-aos="fade-up">
+        <div class="column" data-aos="fade-left">
           <figure>
             <img src="../assets/images/eat-coffee-1x.jpg" srcset="../assets/images/eat-coffee-1x.jpg 1x, ../assets/images/eat-coffee-2x.jpg 2x" alt="Freshly-brewed coffee and an enamel coffee mug that says Life Begins After Coffee">
           </figure>
         </div>
       </section>
       <section class="banner split reverse bg-white border" style="align-items: flex-start;">
-        <figure data-aos="fade-up">
+        <figure data-aos="fade-left">
           <img src="../assets/images/eat-burgers-1x.jpg" srcset="../assets/images/eat-burgers-1x.jpg 1x, ../assets/images/eat-burgers-2x.jpg 2x" alt="Giant, juicy burgers with bacon and cheese">
         </figure>
-        <div class="text" data-aos="fade-up">
+        <div class="text" data-aos="fade-right">
           <h2>Lunch &amp; Dinner</h2>
           <small>Served 11am – 10pm</small>
           <dl class="menu">
@@ -156,22 +156,22 @@
         </div>
       </section>
       <section class="row golden right">
-        <div class="column" data-aos="fade-up">
+        <div class="column" data-aos="fade-right">
           <figure>
             <img src="../assets/images/eat-salad-1x.jpg" srcset="../assets/images/eat-salad-1x.jpg 1x, ../assets/images/eat-salad-2x.jpg 2x" alt="Our salad with roasted tomatoes">
           </figure>
         </div>
-        <div class="column" data-aos="fade-up">
+        <div class="column" data-aos="fade-left">
           <figure>
             <img src="../assets/images/eat-pizza-1x.jpg" srcset="../assets/images/eat-pizza-1x.jpg 1x, ../assets/images/eat-pizza-2x.jpg 2x" alt="Slices of our cheese pizza with robust tomato sauce, cheese, and basil">
           </figure>
         </div>
       </section>
       <section class="banner split bg-white border" style="align-items: flex-start;">
-        <figure data-aos="fade-up">
+        <figure data-aos="fade-right">
           <img src="../assets/images/eat-beer-01-1x.jpg" srcset="../assets/images/eat-beer-01-1x.jpg 1x, ../assets/images/eat-beer-01-2x.jpg 2x" alt="Two glasses of freshly-brewed beers">
         </figure>
-        <div class="text" data-aos="fade-up">
+        <div class="text" data-aos="fade-left">
           <h2>The Brewery</h2>
           <small>Served 11am – 10pm</small>
           <dl class="menu">
@@ -187,22 +187,22 @@
         </div>
       </section>
       <section class="row golden left">
-        <div class="column" data-aos="fade-up">
+        <div class="column" data-aos="fade-right">
           <figure>
             <img src="../assets/images/eat-beer-02-1x.jpg" srcset="../assets/images/eat-beer-02-1x.jpg 1x, ../assets/images/eat-beer-02-2x.jpg 2x" alt="Glass of pilsner beer on a wooden table">
           </figure>
         </div>
-        <div class="column" data-aos="fade-up">
+        <div class="column" data-aos="fade-left">
           <figure>
             <img src="../assets/images/eat-beer-03-1x.jpg" srcset="../assets/images/eat-beer-03-1x.jpg 1x, ../assets/images/eat-beer-03-2x.jpg 2x" alt="Stout and IPA beer being enjoyed by friends">
           </figure>
         </div>
       </section>
       <section class="banner split reverse bg-white border" style="align-items: flex-start;">
-        <figure data-aos="fade-up">
+        <figure data-aos="fade-left">
           <img src="../assets/images/tour-bar-1x.jpg" srcset="../assets/images/tour-bar-1x.jpg 1x, ../assets/images/tour-bar-2x.jpg 2x" alt="Espresso machine in a rustic shed setting">
         </figure>
-        <div class="text" data-aos="fade-up">
+        <div class="text" data-aos="fade-right">
           <h2>Coffee Shoppe</h2>
           <small>Available 6am – 10pm</small>
           <dl class="menu">
@@ -232,14 +232,14 @@
         </div>
       </section>
       <section class="banner short bg-gray" style="align-items: center;" data-aos="fade-up">
-        <div class="text">
+        <div class="text" data-aos="fade-up">
           <h2 class="center">Your Place or Ours</h2>
           <p class="center">We invite you to join us in our taproom, or we'll happily deliver your food and beverages to your room.</p>
         </div>
       </section>
       <section class="row wide">
         <div class="card-group">
-          <div class="card" data-aos="fade-up">
+          <div class="card" data-aos="fade">
             <figure>
               <img src="../assets/images/tgc-room-1x.jpg" srcset="../assets/images/tgc-room-1x.jpg 1x, ../assets/images/tgc-room-2x.jpg 2x" alt="A simple and relaxing queen-sized bed">
             </figure>
@@ -249,7 +249,7 @@
               <p class="icon"><a href="../stay/index.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
-          <div class="card" data-aos="fade-up">
+          <div class="card" data-aos="fade">
             <figure>
               <img src="../assets/images/gather-01-1x.jpg" srcset="../assets/images/gather-01-1x 1x, ../assets/images/gather-01-2x.jpg 2x" alt="Lights and linen hanging from the trees over white linen tablecloths outdoors">
             </figure>
@@ -259,7 +259,7 @@
               <p class="icon"><a href="../gather/index.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
-          <div class="card" data-aos="fade-up">
+          <div class="card" data-aos="fade">
             <figure>
               <img src="../assets/images/tgc-movies-1x.jpg" srcset="../assets/images/tgc-movies-1x.jpg 1x, ../assets/images/tgc-movies-2x.jpg 2x" alt="Watching movies at night in the yard of The Pine Tree Motel">
             </figure>
