--- a/demo/stay/index.html
+++ b/demo/stay/index.html
@@ -81,34 +81,34 @@
     <main>
       <section class="banner tall right dark bg-photo center fixed stay">
         <div class="overlay" style="opacity: 0.425;"></div>
-        <div class="text">
+        <div class="text" data-aos="fade-up">
           <h1>Stay</h1>
           <p>Bright and welcoming, each room is a balance of private space and open design, featuring natural materials interpreted with sophisticated style. The Pine Tree Motel is a comfortable space that allows you to focus, relax, and be yourself.</p>
         </div>
       </section>
       <section class="banner split border">
-        <figure data-aos="fade-up">
+        <figure data-aos="fade-right">
           <img src="../assets/images/tgc-room-1x.jpg" srcset="../assets/images/tgc-room-1x 1x, ../assets/images/tgc-room-2x.jpg 2x" alt="A simple and relaxing queen-sized bed">
         </figure>
-        <div class="text aos-init aos-animate" data-aos="fade-up">
+        <div class="text" data-aos="fade-left">
           <h2 class="visuallyhidden">Calm</h2>
           <p>Minimalist interiors enable impeccable cleanliness and a sense of calm.</p>
         </div>
       </section>
       <section class="banner split reverse border">
-        <figure data-aos="fade-up">
+        <figure data-aos="fade-left">
           <img src="../assets/images/stay-02-1x.jpg" srcset="../assets/images/stay-02-1x 1x, ../assets/images/stay-02-2x.jpg 2x" alt="Cozy pillows on a chair">
         </figure>
-        <div class="text aos-init aos-animate" data-aos="fade-up">
+        <div class="text" data-aos="fade-right">
           <h2 class="visuallyhidden">Comfort</h2>
           <p>Our rooms and amenities are designed to provide refreshing tranquility. A minibar is curated to address a variety of thirst and snack needs.</p>
         </div>
       </section>
       <section class="banner split border" style="align-items: flex-start;">
-        <figure data-aos="fade-up">
+        <figure data-aos="fade-right">
           <img src="../assets/images/hotel-vermont-1x.jpg" srcset="../assets/images/hotel-vermont-1x 1x, ../assets/images/hotel-vermont-2x.jpg 2x" alt="A  queen-sized bed with pillows">
         </figure>
-        <div class="text aos-init aos-animate" data-aos="fade-up">
+        <div class="text" data-aos="fade-left">
           <h2>Amenities</h2>
           <ul>
             <li>Complimentary high-speed wireless</li>
@@ -125,23 +125,23 @@
       </section>
       <section class="banner bg-gray" style="align-items: center;" data-aos="fade-up">
         <div class="text">
-          <h2>Important Information</h2>
-          <h3 style="padding: 1rem 0 0;">Check-In/Check-Out</h3>
-          <p>Check-in is at 3:00 pm, check-out is at 11:00 am. There is a 24 hour cancellation policy unless otherwise specified.</p>
-          <h3>Parking</h3>
-          <p>On-site parking is free for one vehicle per room. Please contact us for additional parking information.</p>
-          <p>We are also pleased to offer two complimentary 80A single-phase Tesla charging stations on the hotel property for use by hotel guests.</p>
-          <h3>Pets</h3>
-            <p>We are happy to offer a limited number of pet-friendly rooms. Please be advised there is a deposit of $100 ($50 non-refundable) per day per pet. Service animals are always allowed free of charge. Please contact us directly to reserve a pet friendly room.</p>
-          <h3>Accessibility</h3>
-          <p>The entire hotel is American Disabilities Act Compliant. ADA rooms are available upon request.</p>
-          <h3>No Smoking Policy</h3>
-          <p>The Pine Tree Motel is an entirely smoke-free (including vaping) environment.</p>
+          <h2 data-aos="fade-left">Important Information</h2>
+          <h3 style="padding: 1rem 0 0;" data-aos="fade-right">Check-In/Check-Out</h3>
+          <p data-aos="fade-right">Check-in is at 3:00 pm, check-out is at 11:00 am. There is a 24 hour cancellation policy unless otherwise specified.</p>
+          <h3 data-aos="fade-left">Parking</h3>
+          <p data-aos="fade-left">On-site parking is free for one vehicle per room. Please contact us for additional parking information.</p>
+          <p data-aos="fade-left">We are also pleased to offer two complimentary 80A single-phase Tesla charging stations on the hotel property for use by hotel guests.</p>
+          <h3 data-aos="fade-right">Pets</h3>
+            <p data-aos="fade-right">We are happy to offer a limited number of pet-friendly rooms. Please be advised there is a deposit of $100 ($50 non-refundable) per day per pet. Service animals are always allowed free of charge. Please contact us directly to reserve a pet friendly room.</p>
+          <h3 data-aos="fade-left">Accessibility</h3>
+          <p data-aos="fade-left">The entire hotel is American Disabilities Act Compliant. ADA rooms are available upon request.</p>
+          <h3 data-aos="fade-right">No Smoking Policy</h3>
+          <p data-aos="fade-right">The Pine Tree Motel is an entirely smoke-free (including vaping) environment.</p>
         </div>
       </section>
       <section class="row wide">
         <div class="card-group">
-          <div class="card" data-aos="fade-up">
+          <div class="card" data-aos="fade">
             <figure>
               <img src="../assets/images/tour-pizza-1x.jpg" srcset="../assets/images/tour-pizza-1x 1x, ../assets/images/tour-pizza-2x.jpg 2x" alt="Delicious pizza with pepperoni and jalapenos">
             </figure>
@@ -151,7 +151,7 @@
               <p class="icon"><a href="../eat/index.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
-          <div class="card" data-aos="fade-up">
+          <div class="card" data-aos="fade">
             <figure>
               <img src="../assets/images/tgc-movies-1x.jpg" srcset="../assets/images/tgc-movies-1x.jpg 1x, ../assets/images/tgc-movies-2x.jpg 2x" alt="Watching movies at night in the yard of The Pine Tree Motel">
             </figure>
@@ -161,7 +161,7 @@
               <p class="icon"><a href="../activities/index.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
-          <div class="card" data-aos="fade-up">
+          <div class="card" data-aos="fade">
             <figure>
               <img src="../assets/images/events-01-1x.jpg" srcset="../assets/images/events-01-1x.jpg 1x, ../assets/images/gather-01-2x.jpg 2x" alt="Lights and linen hanging from the trees over white linen tablecloths outdoors">
             </figure>
