--- a/demo/about/index.html
+++ b/demo/about/index.html
@@ -84,32 +84,32 @@
     <main>
       <section class="banner tall left dark bg-photo center fixed about">
         <div class="overlay" style="opacity: 0.5;"></div>
-        <div class="text" style="align-items: center;">
+        <div class="text" style="align-items: center;" data-aos="fade-up">
           <h1 class="center">The Way Life Should Be</h1>
           <p class="center">Inspired by the classic American roadside motor lodge, we've rebuilt The Pine Tree Motel into a comfortable, contemporary, and relaxing anytime getaway.</p>
         </div>
       </section>
       <section class="banner split border">
-        <figure data-aos="fade-up">
+        <figure data-aos="fade-right">
           <img src="../assets/images/tgc-pool-1x.jpg" srcset="../assets/images/tgc-pool-1x 1x, ../assets/images/tgc-pool-2x.jpg 2x" alt="Forested swimming pool with some old school inner tubes, deck chairs, and picnic tables">
         </figure>
-        <div class="text" data-aos="fade-up">
+        <div class="text" data-aos="fade-left">
           <h2>Tranquility</h2>
           <p>Tucked into a quiet &ndash; but convenient &ndash; nook in southern Maine, we've built this place to be your comfortable home away from home. Spend your entire visit relaxing on our grounds or explore the great state of Maine, and use us as your place to recharge and refresh.</p>
         </div>
       </section>
       <section class="banner split reverse border">
-        <figure data-aos="fade-up">
+        <figure data-aos="fade-left">
           <img src="../assets/images/about-01-1x.jpg" srcset="../assets/images/about-01-1x 1x, ../assets/images/about-01-2x.jpg 2x" alt="A hammock and a couple of chairs on a screened-in porch">
         </figure>
-        <div class="text" data-aos="fade-up">
+        <div class="text" data-aos="fade-right">
           <h2>Comfort</h2>
           <p>We're situated on 2 acres featuring a swimming pool, hammocks to lounge in, a fire pit, picnic area, and plenty of places to relax. Nestled right between Maine's eastern coastline and western mountains, The Pine Tree Motel is a perfect place to stay through all four seasons.</p>
         </div>
       </section>
       <section class="row wide">
         <div class="card-group">
-          <div class="card" data-aos="fade-up">
+          <div class="card" data-aos="fade">
             <figure>
               <img src="../assets/images/tgc-room-1x.jpg" srcset="../assets/images/tgc-room-1x.jpg 1x, ../assets/images/tgc-room-2x.jpg 2x" alt="A simple and relaxing queen-sized bed">
             </figure>
@@ -119,7 +119,7 @@
               <p class="icon"><a href="../stay/index.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
-          <div class="card" data-aos="fade-up">
+          <div class="card" data-aos="fade">
             <figure>
               <img src="../assets/images/tour-pizza-1x.jpg" srcset="../assets/images/tour-pizza-1x 1x, ../assets/images/tour-pizza-2x.jpg 2x" alt="Delicious pizza with pepperoni and jalapenos">
             </figure>
@@ -129,7 +129,7 @@
               <p class="icon"><a href="../eat/index.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
-          <div class="card" data-aos="fade-up">
+          <div class="card" data-aos="fade">
             <figure>
               <img src="../assets/images/tgc-movies-1x.jpg" srcset="../assets/images/tgc-movies-1x.jpg 1x, ../assets/images/tgc-movies-2x.jpg 2x" alt="Watching movies at night in the yard of The Pine Tree Motel">
             </figure>
