--- a/demo/gather/index.html
+++ b/demo/gather/index.html
@@ -85,13 +85,13 @@
     <main>
       <section class="banner tall left dark bg-photo center fixed gather">
         <div class="overlay" style="opacity: 0.5;"></div>
-        <div class="text" style="align-items: center;">
+        <div class="text" style="align-items: center;" data-aos="fade-up">
           <h1 class="center">Groups &amp; Events</h1>
           <p class="center">The perfect place to host your next celebration, meeting, retreat, or special occasion.</p>
         </div>
       </section>
       <section class="banner short bg-gray" style="align-items: center;" data-aos="fade-up">
-        <div class="text">
+        <div class="text" data-aos="fade-up">
           <h2 class="center">Hospitality</h2>
           <p class="center">Our team is passionate about making your meeting or event the best it can possibly be. From rooms, to food, to multimedia, to activities, and more&hellip; we excel at making everything easy, enjoyable, and comfortable.</p>
         </div>
@@ -132,7 +132,7 @@
       </section>
       <section class="row wide">
         <div class="card-group">
-          <div class="card" data-aos="fade-up">
+          <div class="card" data-aos="fade">
             <figure>
               <img src="../assets/images/tgc-room-1x.jpg" srcset="../assets/images/tgc-room-1x.jpg 1x, ../assets/images/tgc-room-2x.jpg 2x" alt="A simple and relaxing queen-sized bed">
             </figure>
@@ -142,7 +142,7 @@
               <p class="icon"><a href="../stay/index.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
-          <div class="card" data-aos="fade-up">
+          <div class="card" data-aos="fade">
             <figure>
               <img src="../assets/images/tour-pizza-1x.jpg" srcset="../assets/images/tour-pizza-1x 1x, ../assets/images/tour-pizza-2x.jpg 2x" alt="Delicious pizza with pepperoni and jalapenos">
             </figure>
@@ -152,7 +152,7 @@
               <p class="icon"><a href="../eat/index.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
-          <div class="card" data-aos="fade-up">
+          <div class="card" data-aos="fade">
             <figure>
               <img src="../assets/images/tgc-movies-1x.jpg" srcset="../assets/images/tgc-movies-1x.jpg 1x, ../assets/images/tgc-movies-2x.jpg 2x" alt="Watching movies at night in the yard of The Pine Tree Motel">
             </figure>
