--- a/demo/index.html
+++ b/demo/index.html
@@ -177,26 +177,26 @@
         </form>
       </section>
       <section class="banner short bg-gray" style="align-items: center;" data-aos="fade-up">
-        <div class="text">
+        <div class="text" data-aos="fade-up">
           <h2 class="center">The Way Life Should Be</h2>
           <p class="center">We’re here to help you explore like a local, relax like it’s your job, and soak in every detail.</p>
         </div>
       </section>
       <section class="banner split border">
-        <figure data-aos="fade-up">
+        <figure data-aos="fade-right">
           <img src="assets/images/tgc-room-1x.jpg" srcset="assets/images/tgc-room-1x 1x, assets/images/tgc-room-2x.jpg 2x" alt="A simple and relaxing queen-sized bed">
         </figure>
-        <div class="text" data-aos="fade-up">
+        <div class="text" data-aos="fade-light">
           <h2>Stay</h2>
           <p>Cozy and comfortable, our rooms offer a modern and warm atmosphere to relax and recharge.</p>
           <a class="button" href="stay/index.html">Our Rooms</a>
         </div>
       </section>
       <section class="banner split reverse border">
-        <figure data-aos="fade-up">
+        <figure data-aos="fade-left">
           <img src="assets/images/tour-pizza-1x.jpg" srcset="assets/images/tour-pizza-1x 1x, assets/images/tour-pizza-2x.jpg 2x" alt="Delicious pizza with pepperoni and jalapenos">
         </figure>
-        <div class="text" data-aos="fade-up">
+        <div class="text" data-aos="fade-right">
           <h2>Eat &amp; Drink</h2>
           <p>Breakfast, lunch, dinner, and everything in between, as well as freshly-brewed beer and coffee available all day long.</p>
           <a class="button" href="eat/index.html">View Menus</a>
@@ -204,7 +204,7 @@
       </section>
       <section class="row wide">
         <div class="card-group">
-          <div class="card" data-aos="fade-up">
+          <div class="card" data-aos="fade">
             <figure>
               <img src="assets/images/tgc-movies-1x.jpg" srcset="assets/images/tgc-movies-1x.jpg 1x, assets/images/tgc-movies-2x.jpg 2x" alt="Movie night at the Pine Tree Motel">
             </figure>
@@ -214,7 +214,7 @@
               <p class="icon"><a href="activities/index.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
-          <div class="card" data-aos="fade-up">
+          <div class="card" data-aos="fade">
             <figure>
               <img src="assets/images/events-01-1x.jpg" srcset="assets/images/events-01-1x.jpg 1x, assets/images/gather-01-2x.jpg 2x" alt="Lights and linen hanging from the trees over white linen tablecloths outdoors">
             </figure>
@@ -224,7 +224,7 @@
               <p class="icon"><a href="gather/index.html">Learn more<span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"/></svg></span></a></p>
             </div>
           </div>
-          <div class="card" data-aos="fade-up">
+          <div class="card" data-aos="fade">
             <figure>
               <img src="assets/images/location-01-1x.jpg" srcset="assets/images/location-01-1x.jpg 1x, assets/images/location-01-2x.jpg 2x" alt="Costal bay scene">
             </figure>
