--- a/demo/stay/index.html
+++ b/demo/stay/index.html
@@ -123,20 +123,30 @@
           </ul>
         </div>
       </section>
-      <section class="banner bg-gray" style="align-items: center;" data-aos="fade-up">
+      <section class="banner bg-gray" style="align-items: center;" data-aos="fade">
         <div class="text">
-          <h2 data-aos="fade-left">Important Information</h2>
-          <h3 style="padding: 1rem 0 0;" data-aos="fade-right">Check-In/Check-Out</h3>
-          <p data-aos="fade-right">Check-in is at 3:00 pm, check-out is at 11:00 am. There is a 24 hour cancellation policy unless otherwise specified.</p>
-          <h3 data-aos="fade-left">Parking</h3>
-          <p data-aos="fade-left">On-site parking is free for one vehicle per room. Please contact us for additional parking information.</p>
-          <p data-aos="fade-left">We are also pleased to offer two complimentary 80A single-phase Tesla charging stations on the hotel property for use by hotel guests.</p>
-          <h3 data-aos="fade-right">Pets</h3>
-            <p data-aos="fade-right">We are happy to offer a limited number of pet-friendly rooms. Please be advised there is a deposit of $100 ($50 non-refundable) per day per pet. Service animals are always allowed free of charge. Please contact us directly to reserve a pet friendly room.</p>
-          <h3 data-aos="fade-left">Accessibility</h3>
-          <p data-aos="fade-left">The entire hotel is American Disabilities Act Compliant. ADA rooms are available upon request.</p>
-          <h3 data-aos="fade-right">No Smoking Policy</h3>
-          <p data-aos="fade-right">The Pine Tree Motel is an entirely smoke-free (including vaping) environment.</p>
+          <h2 data-aos="fade-up">Important Information</h2>
+          <div data-aos="fade-up">
+            <h3 style="padding: 1rem 0 0;">Check-In/Check-Out</h3>
+            <p>Check-in is at 3:00 pm, check-out is at 11:00 am. There is a 24 hour cancellation policy unless otherwise specified.</p>
+          </div>
+          <div style="padding: 2rem 0 0;" data-aos="fade-up">
+            <h3>Parking</h3>
+            <p>On-site parking is free for one vehicle per room. Please contact us for additional parking information.</p>
+            <p>We are also pleased to offer two complimentary 80A single-phase Tesla charging stations on the hotel property for use by hotel guests.</p>
+          </div>
+          <div style="padding: 2rem 0 0;" data-aos="fade-up">
+            <h3>Pets</h3>
+            <p>We are happy to offer a limited number of pet-friendly rooms. Please be advised there is a deposit of $100 ($50 non-refundable) per day per pet. Service animals are always allowed free of charge. Please contact us directly to reserve a pet friendly room.</p>
+          </div>
+          <div style="padding: 2rem 0 0;" data-aos="fade-up">
+            <h3>Accessibility</h3>
+            <p>The entire hotel is American Disabilities Act Compliant. ADA rooms are available upon request.</p>
+          </div>
+          <div style="padding: 2rem 0 0;"data-aos="fade-up">
+            <h3>No Smoking Policy</h3>
+            <p>The Pine Tree Motel is an entirely smoke-free (including vaping) environment.</p>
+          </div>
         </div>
       </section>
       <section class="row wide">
