--- a/demo/stay/index.html
+++ b/demo/stay/index.html
@@ -33,6 +33,10 @@
       @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-width: 48rem) {
         .banner.about {background-image: url(../assets/images/stay-01-2x.jpg);}
       }
+
+      @media (min-width: 48rem) {
+        .banner.information .text {padding: 4rem;}
+      }
     </style>
     <!-- JSON-LD markup -->
     <script type="application/ld+json">
@@ -123,7 +127,7 @@
           </ul>
         </div>
       </section>
-      <section class="banner bg-gray" style="align-items: center;" data-aos="fade">
+      <section class="banner bg-gray information" style="align-items: center;" data-aos="fade">
         <div class="text">
           <h2 data-aos="fade-up">Important Information</h2>
           <div data-aos="fade-up">
