Added links and scale transform to card figure images

--- a/demo/eat/index.html
+++ b/demo/eat/index.html
@@ -110,11 +110,11 @@
             <dt>Baked goods<span>5</span></dt>
             <dd>Muffins, scones, croissants, bagels, and more</dd>
             <dt>Egg Sandwich<span>8</span></dt>
-            <dd>Farm fresh eggs, your choice of cheese and bacon, ham, sausage, or avocado</dd>
+            <dd>Farm fresh eggs and your choice of cheese and bacon, ham, sausage, or avocado</dd>
             <dt>Omelet<span>10</span></dt>
-            <dd>Farm fresh eggs, your choice of cheese and bacon, ham, sausage, or avocado</dd>
+            <dd>Farm fresh eggs and your choice of cheese and bacon, ham, sausage, or avocado</dd>
             <dt>Egg Skillet<span>15</span></dt>
-            <dd>Farm fresh eggs, your choice of cheese and bacon, ham, sausage, or avocado, and Maine potatoes served in a cast iron skillet</dd>
+            <dd>Farm fresh eggs and your choice of cheese and bacon, ham, sausage, or avocado, and Maine potatoes served in a cast iron skillet</dd>
             <dt>Fruit Bowl<span>10</span></dt>
             <dd>Fresh, local seasonal fruits</dd>
           </dl>
@@ -243,9 +243,9 @@
       <section class="row wide">
         <div class="card-group">
           <div class="card" data-aos="fade">
-            <figure>
+            <a href="../stay/index.html"><figure>
               <img src="../assets/images/tgc-room-1x.jpg" srcset="../assets/images/tgc-room-1x.jpg 1x, ../assets/images/tgc-room-2x.jpg 2x" alt="A simple and relaxing queen-sized bed">
-            </figure>
+            </figure></a>
             <div class="text">
               <h2>Stay</h2>
               <p>Cozy and comfortable, our rooms offer a modern and warm atmosphere to relax and recharge.</p>
@@ -253,9 +253,9 @@
             </div>
           </div>
           <div class="card" data-aos="fade">
-            <figure>
+            <a href="../gather/index.html"><figure>
               <img src="../assets/images/gather-01-1x.jpg" srcset="../assets/images/gather-01-1x 1x, ../assets/images/gather-01-2x.jpg 2x" alt="Lights and linen hanging from the trees over white linen tablecloths outdoors">
-            </figure>
+            </figure></a>
             <div class="text">
               <h2>Gather</h2>
               <p>Let us host your celebration, meeting, retreat, or special occasion.</p>
@@ -263,9 +263,9 @@
             </div>
           </div>
           <div class="card" data-aos="fade">
-            <figure>
+            <a href="../activities/index.html"><figure>
               <img src="../assets/images/tgc-movies-1x.jpg" srcset="../assets/images/tgc-movies-1x.jpg 1x, ../assets/images/tgc-movies-2x.jpg 2x" alt="Watching movies at night in the yard of The Pine Tree Motel">
-            </figure>
+            </figure></a>
             <div class="text">
               <h2>Activities</h2>
               <p>We offer daily activities including hiking, yoga, kayaking, movies, and more.</p>
