--- a/demo/activities/index.html
+++ b/demo/activities/index.html
@@ -141,9 +141,9 @@
       <section class="row wide">
         <div class="card-group">
           <div class="card" data-aos="fade">
-            <figure>
+            <a href="../stay/index.html"><figure>
               <img src="../assets/images/tgc-room-1x.jpg" srcset="../assets/images/tgc-room-1x.jpg 1x, ../assets/images/tgc-room-2x.jpg 2x" alt="A simple and relaxing queen-sized bed">
-            </figure>
+            </figure></a>
             <div class="text">
               <h2>Stay</h2>
               <p>Cozy and comfortable, our rooms offer a modern and warm atmosphere to relax and recharge.</p>
@@ -151,9 +151,9 @@
             </div>
           </div>
           <div class="card" data-aos="fade">
-            <figure>
+            <a href="../eat/index.html"><figure>
               <img src="../assets/images/tour-pizza-1x.jpg" srcset="../assets/images/tour-pizza-1x 1x, ../assets/images/tour-pizza-2x.jpg 2x" alt="Delicious pizza with pepperoni and jalapenos">
-            </figure>
+            </figure></a>
             <div class="text">
               <h2>Eat &amp; Drink</h2>
               <p>Breakfast, lunch, dinner, and everything in between, as well as freshly-brewed beer and coffee available all day long.</p>
@@ -161,9 +161,9 @@
             </div>
           </div>
           <div class="card" data-aos="fade">
-            <figure>
+            <a href="../gather/index.html"><figure>
               <img src="../assets/images/gather-01-1x.jpg" srcset="../assets/images/gather-01-1x 1x, ../assets/images/gather-01-2x.jpg 2x" alt="Lights and linen hanging from the trees over white linen tablecloths outdoors">
-            </figure>
+            </figure></a>
             <div class="text">
               <h2>Gather</h2>
               <p>Let us host your celebration, meeting, retreat, or special occasion.</p>
