--- a/demo/index.html
+++ b/demo/index.html
@@ -205,9 +205,9 @@
       <section class="row wide">
         <div class="card-group">
           <div class="card" data-aos="fade">
-            <figure>
+            <a href="activities/index.html"><figure>
               <img src="assets/images/tgc-movies-1x.jpg" srcset="assets/images/tgc-movies-1x.jpg 1x, assets/images/tgc-movies-2x.jpg 2x" alt="Movie night at the Pine Tree Motel">
-            </figure>
+            </figure></a>
             <div class="text">
               <h2>Activities</h2>
               <p>We offer daily activities including hiking, yoga, kayaking, movies, and more.</p>
@@ -215,9 +215,9 @@
             </div>
           </div>
           <div class="card" data-aos="fade">
-            <figure>
+            <a href="gather/index.html"><figure>
               <img src="assets/images/events-01-1x.jpg" srcset="assets/images/events-01-1x.jpg 1x, assets/images/gather-01-2x.jpg 2x" alt="Lights and linen hanging from the trees over white linen tablecloths outdoors">
-            </figure>
+            </figure></a>
             <div class="text">
               <h2>Gather</h2>
               <p>Let us host your celebration, meeting, retreat, or special occasion.</p>
@@ -225,9 +225,9 @@
             </div>
           </div>
           <div class="card" data-aos="fade">
-            <figure>
+            <a href="https://visitmaine.com/" target="_blank"><figure>
               <img src="assets/images/location-01-1x.jpg" srcset="assets/images/location-01-1x.jpg 1x, assets/images/location-01-2x.jpg 2x" alt="Costal bay scene">
-            </figure>
+            </figure></a>
             <div class="text">
               <h2>About Maine</h2>
               <p>No matter what interests you, there's something for you do do here in Maine.</p>
