--- a/demo/stay/index.html
+++ b/demo/stay/index.html
@@ -142,9 +142,9 @@
       <section class="row wide">
         <div class="card-group">
           <div class="card" data-aos="fade">
-            <figure>
+            <a href="../eat/index.html"><figure>
               <img src="../assets/images/tour-pizza-1x.jpg" srcset="../assets/images/tour-pizza-1x 1x, ../assets/images/tour-pizza-2x.jpg 2x" alt="Delicious pizza with pepperoni and jalapenos">
-            </figure>
+            </figure></a>
             <div class="text">
               <h2>Eat &amp; Drink</h2>
               <p>Breakfast, lunch, dinner, and everything in between, as well as freshly-brewed beer and coffee available all day long.</p>
@@ -152,9 +152,9 @@
             </div>
           </div>
           <div class="card" data-aos="fade">
-            <figure>
+            <a href="../gather/index.html"><figure>
               <img src="../assets/images/events-01-1x.jpg" srcset="../assets/images/events-01-1x.jpg 1x, ../assets/images/gather-01-2x.jpg 2x" alt="Lights and linen hanging from the trees over white linen tablecloths outdoors">
-            </figure>
+            </figure></a>
             <div class="text">
               <h2>Gather</h2>
               <p>Let us host your celebration, meeting, retreat, or special occasion.</p>
@@ -162,9 +162,9 @@
             </div>
           </div>
           <div class="card" data-aos="fade">
-            <figure>
+            <a href="../activities/index.html"><figure>
               <img src="../assets/images/tgc-movies-1x.jpg" srcset="../assets/images/tgc-movies-1x.jpg 1x, ../assets/images/tgc-movies-2x.jpg 2x" alt="Watching movies at night in the yard of The Pine Tree Motel">
-            </figure>
+            </figure></a>
             <div class="text">
               <h2>Activities</h2>
               <p>We offer daily activities including hiking, yoga, kayaking, movies, and more.</p>
