Added skip links to all pages

--- a/demo/about/index.html
+++ b/demo/about/index.html
@@ -62,6 +62,9 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5W57LD3"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+    <section class="skip">
+      <a href="#content">Skip to Content</a>
+    </section>
     <header>
       <nav aria-labelledby="header-navigation">
         <button class="menu-toggle" aria-expanded="false" aria-controls="header-navigation">
@@ -89,7 +92,7 @@
           <p class="center">Inspired by the classic American roadside motor lodge, we've rebuilt The Pine Tree Motel into a comfortable, contemporary, and relaxing anytime getaway.</p>
         </div>
       </section>
-      <section class="banner split border">
+      <section id="content" class="banner split border">
         <figure data-aos="fade-right">
           <img src="../assets/images/tgc-pool-1x.jpg" srcset="../assets/images/tgc-pool-1x 1x, ../assets/images/tgc-pool-2x.jpg 2x" alt="Forested swimming pool with some old school inner tubes, deck chairs, and picnic tables">
         </figure>
