--- a/demo/activities/index.html
+++ b/demo/activities/index.html
@@ -64,6 +64,9 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5W57LD3"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+    <section class="skip">
+      <a href="#content">Skip to Content</a>
+    </section>
     <header>
       <nav aria-labelledby="header-navigation">
         <button class="menu-toggle" aria-expanded="false" aria-controls="header-navigation">
@@ -91,7 +94,7 @@
           <p class="center">We invite you to relax, but if you also like to do stuff we're happy to provide options.</p>
         </div>
       </section>
-      <section class="row wide">
+      <section id="content" class="row wide">
         <div class="media-grid-block" style="padding: 0;">
           <div class="media-grid-item" data-aos="fade-up">
             <figure>
