--- a/demo/eat/index.html
+++ b/demo/eat/index.html
@@ -66,6 +66,9 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5W57LD3"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+    <section class="skip">
+      <a href="#content">Skip to Content</a>
+    </section>
     <header>
       <nav aria-labelledby="header-navigation">
         <button class="menu-toggle" aria-expanded="false" aria-controls="header-navigation">
@@ -99,7 +102,7 @@
           <p class="center">We offer breakfast and lunch and dinner, as well as beer from our own brewery. Freshly brewed local coffees are also available all day long.</p>
         </div>
       </section>
-      <section class="banner split bg-white border" style="align-items: flex-start;">
+      <section id="content" class="banner split bg-white border" style="align-items: flex-start;">
         <figure data-aos="fade-right">
           <img src="../assets/images/eat-breakfast-01-1x.jpg" srcset="../assets/images/eat-breakfast-01-1x.jpg 1x, ../assets/images/eat-breakfast-01-2x.jpg 2x" alt="Delicious egg sandwich with ham and cheese on an english muffin">
         </figure>
