--- a/demo/gather/index.html
+++ b/demo/gather/index.html
@@ -63,6 +63,9 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5W57LD3"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+    <section class="skip">
+      <a href="#content">Skip to Content</a>
+    </section>
     <header>
       <nav aria-labelledby="header-navigation">
         <button class="menu-toggle" aria-expanded="false" aria-controls="header-navigation">
@@ -96,7 +99,7 @@
           <p class="center">Our team is passionate about making your meeting or event the best it can possibly be. From rooms, to food, to multimedia, to activities, and more&hellip; we excel at making everything easy, enjoyable, and comfortable.</p>
         </div>
       </section>
-      <section class="row wide">
+      <section id="content" class="row wide">
         <div class="media-grid-block" style="padding: 0;">
           <div class="media-grid-item" data-aos="fade-up">
             <figure>
