--- a/demo/index.html
+++ b/demo/index.html
@@ -110,6 +110,9 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5W57LD3"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+    <section class="skip">
+      <a href="#content">Skip to Content</a>
+    </section>
     <header>
       <nav aria-labelledby="header-navigation">
         <button class="menu-toggle" aria-expanded="false" aria-controls="header-navigation">
@@ -138,7 +141,7 @@
           <p class="center">A Comfortable &amp; Contemporary American Roadside Motor Lodge</p>
         </div>
       </section>
-      <section class="row wide availability">
+      <section id="content" class="row wide availability">
         <h2 class="visuallyhidden">Check Availability</h2>
         <form>
           <fieldset class="sm">
