--- a/demo/stay/index.html
+++ b/demo/stay/index.html
@@ -59,6 +59,9 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5W57LD3"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+    <section class="skip">
+      <a href="#content">Skip to Content</a>
+    </section>
     <header>
       <nav aria-labelledby="header-navigation">
         <button class="menu-toggle" aria-expanded="false" aria-controls="header-navigation">
@@ -86,7 +89,7 @@
           <p>Bright and welcoming, each room is a balance of private space and open design, featuring natural materials interpreted with sophisticated style. The Pine Tree Motel is a comfortable space that allows you to focus, relax, and be yourself.</p>
         </div>
       </section>
-      <section class="banner split border">
+      <section id="content" class="banner split border">
         <figure data-aos="fade-right">
           <img src="../assets/images/tgc-room-1x.jpg" srcset="../assets/images/tgc-room-1x 1x, ../assets/images/tgc-room-2x.jpg 2x" alt="A simple and relaxing queen-sized bed">
         </figure>
