Updated skip links
Changed sections to divs to avoid html5 validation errors

--- a/demo/index.html
+++ b/demo/index.html
@@ -110,9 +110,9 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5W57LD3"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <section class="skip">
+    <div class="skip">
       <a href="#content">Skip to Content</a>
-    </section>
+    </div>
     <header>
       <nav aria-labelledby="header-navigation">
         <button class="menu-toggle" aria-expanded="false" aria-controls="header-navigation">
