Moved card figure img transformation css
From demo style sheet to cards style sheet

--- a/demo/index.html
+++ b/demo/index.html
@@ -182,7 +182,7 @@
       <section class="banner short bg-gray" style="align-items: center;" data-aos="fade-up">
         <div class="text" data-aos="fade-up">
           <h2 class="center">The Way Life Should Be</h2>
-          <p class="center">We’re here to help you explore like a local, relax like it’s your job, and soak in every detail.</p>
+          <p class="center">We&rsquo;re here to help you explore like a local and relax like it&rsquo;s your job.</p>
         </div>
       </section>
       <section class="banner split border">
